Add mean value plotting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(append_to_data)
 export(create_new_data)
 export(dejection_graph)
 export(lactation_graph)
+export(mean_df)
 export(milk_feeding_graph)
 export(save_data)
 export(temperature_graph)
